--- a/index.css
+++ b/index.css
@@ -208,11 +208,7 @@ li {
 
 /* Tablet Styles */
 
-@media screen and (max-width: 1024px) {
- body {
-  background-color: blue;
- }
-}
+@media screen and (max-width: 1024px) {}
 
 /* Mobile styles */
 
