--- a/index.css
+++ b/index.css
@@ -1,215 +1,388 @@
 * {
- box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
- font-family: 'Quicksand', sans-serif;
- color: rgb(180, 174, 106);
- background: black;
+  font-family: "Quicksand", sans-serif;
+  color: rgb(180, 174, 106);
+  background: black;
 }
 
 .wrapper {
- margin: 0 auto;
- display: grid;
- grid-template-rows: 950px 500px 950px 500px 300px;
- grid-gap: 50px;
- width: 70vw;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: 950px 500px 950px 500px 300px;
+  grid-gap: 50px;
+  width: 70vw;
 }
 
 /* header styles */
 
 .header {
- display: grid;
- grid-template-columns: repeat(3, 1fr);
- grid-template-rows: 50px 350px 500px;
- grid-gap: 50px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 50px 350px 500px;
+  grid-gap: 50px;
 }
 
 .navigation {
- width: 70vw;
- grid-column: span 3;
- grid-row: 1/2;
- overflow: hidden;
- position: fixed;
- background-color: black;
- opacity: 0.8;
+  width: 70vw;
+  grid-column: span 3;
+  grid-row: 1/2;
+  overflow: hidden;
+  position: fixed;
+  background-color: black;
+  opacity: 0.8;
 }
 
 .nav {
- font-size: 25px;
- margin: 10px;
- float: right;
+  font-size: 25px;
+  margin: 10px;
+  float: right;
 }
 
 .intro {
- grid-column: span 3;
- grid-row: 3/4;
+  grid-column: span 3;
+  grid-row: 3/4;
 }
 
 h1 {
- font-size: 4em;
-}
-
-.head_img {
- float: left;
+  font-size: 4em;
 }
 
 /* About Styles */
 
 .about {
- display: grid;
- grid-template-columns: repeat(4, 1fr);
- padding: 0 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 0 20px;
 }
 
 .me {
- grid-column: 1/3;
+  grid-column: 1/3;
 }
 
 .skills {
- grid-column: 3/4;
+  grid-column: 3/4;
 }
 
 .other {
- grid-column: 4/-1;
+  grid-column: 4/-1;
 }
 
 p {
- line-height: 2em;
- font-size: 1em;
+  line-height: 2em;
+  font-size: 1em;
 }
 
 /* Project styles */
 
 .work {
- display: grid;
- grid-template-columns: repeat(4, 1fr);
- grid-template-rows: repeat(4, 1fr);
- grid-gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 20px;
 }
 
 .trex {
- background-size: cover;
- background-repeat: no-repeat;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .indulge {
- grid-column: 1/3;
- grid-row: 1/3;
- background-image: url(images/rsz_indulge.jpg);
+  grid-column: 1/3;
+  grid-row: 1/3;
+  background-image: url(images/rsz_indulge.jpg);
 }
 
 .project2 {
- grid-column: 3/4;
- grid-row: 1/3;
- background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
+  grid-column: 3/4;
+  grid-row: 1/3;
+  background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
 }
 
 .templates {
- grid-column: 4/-1;
- grid-row: 2/4;
- background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
+  grid-column: 4/-1;
+  grid-row: 2/4;
+  background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
 }
 
 .more {
- grid-column: 1/2;
- grid-row: 3/-1;
- background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
+  grid-column: 1/2;
+  grid-row: 3/-1;
+  background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
 }
 
 .more1 {
- grid-column: 2/4;
- grid-row: 3/-1;
- background-image: url(images/rsz_indulge.jpg);
+  grid-column: 2/4;
+  grid-row: 3/-1;
+  background-image: url(images/rsz_indulge.jpg);
 }
 
 .project3 {
- background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
+  background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
 }
 
 .more2 {
- background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
+  background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
 }
 
 /* Blog Styles */
 
 .blog {
- margin: 0 auto;
- width: 70%;
- display: grid;
- grid-template-columns: repeat(2, 1fr);
- grid-gap: 50px;
+  margin: 0 auto;
+  width: 70%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 50px;
 }
 
 .articles {
- grid-column: 1/2;
+  grid-column: 1/2;
 }
 
 a {
- text-decoration: none;
- color: rgb(180, 174, 106);
+  text-decoration: none;
+  color: rgb(180, 174, 106);
 }
 
 .authors {
- color: whitesmoke;
- margin-top: 0;
+  color: whitesmoke;
+  margin-top: 0;
 }
 
 .music {
- grid-column: 2/-1;
+  grid-column: 2/-1;
 }
 
 /* Contact Styles */
 
 img {
- float: left;
+  float: left;
 }
 
 li {
- list-style-type: none;
+  list-style-type: none;
 }
 
 .git {
- color: rgb(180, 174, 106);
- font-size: 25px;
+  color: rgb(180, 174, 106);
+  font-size: 25px;
 }
 
 .contact {
- display: grid;
- grid-template-columns: repeat(2, 1fr);
- grid-template-rows: 200px 10px;
- grid-gap: 10px;
- margin: 50px 0;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 200px 10px;
+  grid-gap: 10px;
+  margin: 50px 0;
 }
 
 .details {
- grid-column: 1/2;
- grid-row: 1/2;
+  grid-column: 1/2;
+  grid-row: 1/2;
 }
 
 .quote {
- grid-column: 2/-1;
- grid-row: 1/2;
- display: grid;
- text-align: center;
+  grid-column: 2/-1;
+  grid-row: 1/2;
+  display: grid;
+  text-align: center;
 }
 
 .quo {
- margin: 0;
- padding: 80px 0;
+  margin: 0;
+  padding: 80px 0;
 }
 
 .credits {
- grid-column: span 2;
- text-align: center;
+  grid-column: span 2;
+  text-align: center;
 }
 
 /* Media Queries */
 
 /* Tablet Styles */
 
-@media screen and (max-width: 1024px) {}
+@media screen and (max-width: 1024px) {
+  .wrapper {
+    grid-template-rows: 650px 500px 950px 500px 300px;
+    grid-gap: 30px;
+    width: 95vw;
+  }
+
+  /* header styles */
+
+  .header {
+    grid-template-rows: 50px 250px 300px;
+    grid-gap: 30px;
+  }
+
+  .navigation {
+    width: 95vw;
+  }
+
+  .nav {
+    font-size: 20px;
+  }
+
+  h1 {
+    font-size: 3em;
+    margin: 50px 0;
+  }
+
+  /* About Styles */
+
+  .about {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    padding: 0 20px;
+  }
+
+  .me {
+    grid-column: 1/3;
+  }
+
+  .skills {
+    grid-column: 3/4;
+  }
+
+  .other {
+    grid-column: 4/-1;
+  }
+
+  p {
+    line-height: 2em;
+    font-size: 1em;
+  }
+
+  /* Project styles */
+
+  .work {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 20px;
+  }
+
+  .trex {
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
+  .indulge {
+    grid-column: 1/3;
+    grid-row: 1/3;
+    background-image: url(images/rsz_indulge.jpg);
+  }
+
+  .project2 {
+    grid-column: 3/4;
+    grid-row: 1/3;
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
+  }
+
+  .templates {
+    grid-column: 4/-1;
+    grid-row: 2/4;
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
+  }
+
+  .more {
+    grid-column: 1/2;
+    grid-row: 3/-1;
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
+  }
+
+  .more1 {
+    grid-column: 2/4;
+    grid-row: 3/-1;
+    background-image: url(images/rsz_indulge.jpg);
+  }
+
+  .project3 {
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
+  }
+
+  .more2 {
+    background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
+  }
+
+  /* Blog Styles */
+
+  .blog {
+    margin: 0 auto;
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
+  }
+
+  .articles {
+    grid-column: 1/2;
+  }
+
+  a {
+    text-decoration: none;
+    color: rgb(180, 174, 106);
+  }
+
+  .authors {
+    color: whitesmoke;
+    margin-top: 0;
+  }
+
+  .music {
+    grid-column: 2/-1;
+  }
+
+  /* Contact Styles */
+
+  img {
+    float: left;
+  }
+
+  li {
+    list-style-type: none;
+  }
+
+  .git {
+    color: rgb(180, 174, 106);
+    font-size: 25px;
+  }
+
+  .contact {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 200px 10px;
+    grid-gap: 10px;
+    margin: 50px 0;
+  }
+
+  .details {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+
+  .quote {
+    grid-column: 2/-1;
+    grid-row: 1/2;
+    display: grid;
+    text-align: center;
+  }
+
+  .quo {
+    margin: 0;
+    padding: 80px 0;
+  }
+
+  .credits {
+    grid-column: span 2;
+    text-align: center;
+  }
+}
 
 /* Mobile styles */
 
-@media screen and (max-width: 600px) {}
+@media screen and (max-width: 600px) {
+}
