--- a/index.css
+++ b/index.css
@@ -70,6 +70,10 @@ h1 {
   grid-column: 4/-1;
 }
 
+h2 {
+  text-align: center;
+}
+
 p {
   line-height: 2em;
   font-size: 1em;
@@ -163,6 +167,7 @@ img {
 
 li {
   list-style-type: none;
+  font-size: 1em;
 }
 
 .git {
@@ -208,7 +213,7 @@ li {
   .wrapper {
     grid-template-rows: 650px 500px 950px 500px 300px;
     grid-gap: 30px;
-    width: 95vw;
+    width: 97vw;
   }
 
   /* header styles */
@@ -219,7 +224,7 @@ li {
   }
 
   .navigation {
-    width: 95vw;
+    width: 97vw;
   }
 
   .nav {
@@ -239,20 +244,8 @@ li {
     padding: 0 20px;
   }
 
-  .me {
-    grid-column: 1/3;
-  }
-
-  .skills {
-    grid-column: 3/4;
-  }
-
-  .other {
-    grid-column: 4/-1;
-  }
-
   p {
-    line-height: 2em;
+    line-height: 1.5em;
     font-size: 1em;
   }
 
