--- a/index.css
+++ b/index.css
@@ -89,14 +89,15 @@ p {
 }
 
 .trex {
-  background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .indulge {
   grid-column: 1/3;
   grid-row: 1/3;
   background-image: url(images/rsz_indulge.jpg);
+  background-position-x: 30%;
 }
 
 .project2 {
@@ -121,6 +122,7 @@ p {
   grid-column: 2/4;
   grid-row: 3/-1;
   background-image: url(images/rsz_indulge.jpg);
+  background-position-x: 30%;
 }
 
 .project3 {
@@ -252,52 +254,17 @@ li {
   /* Project styles */
 
   .work {
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-template-rows: repeat(auto-fit, minmax(150px, 1fr));
     grid-gap: 10px;
   }
 
-  .trex {
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
   .indulge {
-    grid-column: 1/3;
-    grid-row: 1/3;
-    background-image: url(images/rsz_indulge.jpg);
-  }
-
-  .project2 {
-    grid-column: 3/4;
-    grid-row: 1/3;
-    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
-  }
-
-  .templates {
-    grid-column: 4/-1;
-    grid-row: 2/4;
-    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
-  }
-
-  .more {
-    grid-column: 1/2;
-    grid-row: 3/-1;
-    background-image: url(images/rsz_screen_shot_2018-05-16_at_50729_pm.png);
+    background-position-x: 40%;
   }
 
   .more1 {
-    grid-column: 2/4;
-    grid-row: 3/-1;
-    background-image: url(images/rsz_indulge.jpg);
-  }
-
-  .project3 {
-    background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
-  }
-
-  .more2 {
-    background-image: url(images/rsz_screen_shot_2018-05-16_at_51713_pm.png);
+    background-position-x: 40%;
   }
 
   /* Blog Styles */
